--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | LPBPFCGA</title>
-  <meta property="og:site_name" content="Libertarian Party of Bartow, Polk, and Floyd County" />
-  <meta property="og:title" content="Home" />
-  <meta property="og:description" content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead
-    the fight locally on instances of government abuse and overpolicing by spreading the word and monitoring the
-    other two parties from getting too comfortable." />
+  <title>Libertarian Party of Floyd County, GA</title>
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Libertarian Party of Floyd County, GA" />
+  <meta property="og:title" content="Libertarian Party of Floyd County" />
+  <meta property="og:description" content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead the fight locally on instances of government abuse." />
   <meta property="og:image" content="/assets/images/logo.png" />
   <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -34,6 +33,16 @@
     })(window, document, 'script', 'https://cdn.sender.net/accounts_resources/universal.js', 'sender');
     sender('d5a82d08275817')
   </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G1KYEEZ7E0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G1KYEEZ7E0');
+</script>
 </head>
 
 <body>
