Mobile Revamp + Convention Page

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   <title>Libertarian Party of Floyd County, GA</title>
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Libertarian Party of Floyd County, GA" />
-  <meta property="og:title" content="Event Calendar | Libertarian Party of Floyd County" />
+  <meta property="og:title" content="Error 404 | Libertarian Party of Floyd County" />
   <meta property="og:description" content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead the fight locally on instances of government abuse." />
   <meta property="og:image" content="/assets/images/logo.png" />
   <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
@@ -89,18 +89,18 @@
   </header>
 
   <section
-    style="background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.9)), url('assets/images/Calendar.jpg');"
+    style="background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.9)), url('assets/images/about-us.jpg');"
     class="hero">
     <div class="hero-text">
-      <h1 style="font-size: 50px; line-height: 1;">EVENT CALENDAR</h1>
+      <h1 style="font-size: 50px; line-height: 1;">Error 404:<br>Page Not Found</h1>
     </div>
   </section>
 
   <section>
-    <div class="row" style="max-width: 90%;">
-      <iframe
-        src="https://calendar.google.com/calendar/embed?height=800&wkst=1&ctz=America%2FNew_York&bgcolor=%23ffffff&showNav=0&showCalendars=0&showPrint=0&showTz=0&src=ODJjNjJiNDFmNDk3ZWI0ODkyZGMxMDRmMWQ1Y2Y0YmY5OGE4MDk4MGRlODk1MTk2MGU4ZTY1OWFkMzhiNjE5OUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23EF6C00"
-        style="border:solid 1px #777; display: block; margin: auto;" width="100%" height="700" frameborder="0" scrolling="no"></iframe>
+    <div class="row">
+      <h1>Sorry, that web address doesn't exist or could not be found!</h1>
+      <p>For any web-related questions, contact <a href="mailto:sergio.ortega@lpfloyd.com">the site owner</a>.</p>
+    </div>
   </section>
 
   <div style="background-image: url('assets/images/Footer.png');" class="footer-image">
