--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Libertarian Party of Floyd County, GA" />
   <meta property="og:title" content="Libertarian Party of Floyd County" />
-  <meta property="og:description" content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead the fight locally on instances of government abuse." />
+  <meta property="og:description"
+    content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead the fight locally on instances of government abuse." />
   <meta property="og:image" content="/assets/images/logo.png" />
   <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -34,15 +35,15 @@
     sender('d5a82d08275817')
   </script>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-G1KYEEZ7E0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G1KYEEZ7E0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-G1KYEEZ7E0');
-</script>
+    gtag('config', 'G-G1KYEEZ7E0');
+  </script>
 </head>
 
 <body>
@@ -105,6 +106,7 @@
     <div class="row">
       <div class="leftcolumn">
         <section class="news">
+          <div class="pc-only">
           <h2 style="padding-top: 0px;">What Is A Libertarian?</h2>
           <p1>The Libertarian Party is the largest third-party in the United States and acts completely separate from
             the two major parties. As Libertarians, our philosophy holds two core principles: only you know how to best
@@ -117,15 +119,23 @@
             the fight locally on instances of government abuse and overpolicing by spreading the word and monitoring the
             other two parties from getting too comfortable. We also work with other freedom organizations in the state
             to introduce their work into the tri-county area.</p1>
+          </div>
+
+          <div class="mobile-only">
+            <h2 style="padding-top: 0px;">What Is A Libertarian?</h2>
+          <p1>The Libertarian Party, the largest U.S. third party, stands apart from Democrats and Republicans. Its core principles are simple: live your life as you choose and don’t harm others or take their property. Libertarians advocate for a small government focused solely on peace and property rights—no overreaching agencies, no gun grabs, and no bloated deficits. It’s about you and your community.</p1>
+          <p1>Here in Bartow, Polk, and Floyd County, we're on a mission to elect libertarians to local offices to lower our actually property taxes and stretch every dollar they can.
+          </p1>
+          </div>
+          </div>
         </section>
       </div>
       <div class="rightcolumn" style="padding-bottom: 10px;">
-        <iframe width="560" height="315"
-              src="https://www.youtube-nocookie.com/embed/cG6Hb7eQb4I?si=wzjN5yGW9eLIo1E_" title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
-              style="max-width: 100%; display: block; margin: auto;"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cG6Hb7eQb4I?si=wzjN5yGW9eLIo1E_"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+          style="max-width: 100%; display: block; margin: auto;"></iframe>
       </div>
     </div>
   </section>
@@ -226,47 +236,18 @@
   <div class="mobile-only">
     <div class="row-omit" style="background-color: #0D3B66; max-width: 100%; position: relative;">
       <div style="margin: auto; width: 70%;">
-        <h2 style="color: #FAF0CA; padding-top: 0%;">Business Regulations</h2>
-        <p1 style="color: #FAF0CA;">The world runs on commerce, money, and free trade of goods and labor. At a basic
-          level, labor income is the lifeline of a family's household. When the Government restricts the ability of a
-          person to transact business or work in certain industries, it makes more difficult the life of the
-          household.
-          Except when absolutely needed, the Government should have no ability to restrict businesses with added
-          regulations.<br><br>Libertarians detest excessive business regulation as an unconstitutional exercise of
-          government authority into the lives of working Americans. Most of these regulations take place on the local
-          level, with measures like zoning laws and finance ordinances for businesses to transact commerce. In our
-          area
-          especially, local councils have weaponized city licenses to impose their own values on small businesses. If
-          a
-          business doesn't conform to the local council, they can have their license pulled. This is a gross abuse of
-          power and Libertarians are full against it.</p1>
+        <h2 style="color: #FAF0CA; padding-top: 0%;"><mark>Business Regulations</mark></h2>
+        <p1 style="color: #FAF0CA;">Income is vital to a household's survival. Government restrictions on work or business make life harder for families. Unless absolutely necessary, added regulations should not limit businesses. Libertarians oppose excessive regulation, viewing it as unconstitutional interference. Locally, measures like zoning laws and city licenses are often misused, with councils imposing personal values on small businesses by threatening their licenses. Libertarians strongly oppose such abuses of power.</p1>
       </div>
 
       <div style="margin: auto; width: 70%;">
-        <h2 style="color: #FAF0CA; padding-top: 0%;">Localized Fiscal Responsibility</h2>
-        <p1 style="color: #FAF0CA;">Last year, the Rome City Commission spent thousands of dollars on attorneys fees
-          to investigate an ethics complaint against one of their own Commissioners. Weeks later, the attorney
-          resigned
-          the
-          case, citing the irresponsible and personally repulsive behavior of the council. Following this resignation,
-          another attorney was retained who had to begin their work from square one. This feat led to a complete and
-          utter waste of taxpayer dollars because Rome's City Commissioners couldn't maintain professionalism for a
-          serious matter.<br><br>Every dollar brought into the government's control was done by theft: all taxation is
-          theft. If they're going to waste the money, they don't deserve it. At the very least, every dollar should
-          produce a dollar's worth of value. Libertarians will stretch every dollar possible so as to avoid increasing
-          taxes.</p1>
+        <h2 style="color: #FAF0CA; padding-top: 10;"><mark>Localized Fiscal Responsibility</mark></h2>
+        <p1 style="color: #FAF0CA;">Last year, the Rome City Commission wasted thousands on attorney fees for an ethics complaint against a Commissioner. The first attorney quit, citing the council's unprofessional behavior, forcing a new attorney to start from scratch. This wasted taxpayer money, which Libertarians see as theft. If taxes are collected, every dollar should provide value. Libertarians pledge to maximize efficiency and avoid tax increases.</p1>
       </div>
 
       <div style="margin: auto; width: 70%;">
-        <h2 style="color: #FAF0CA; padding-top: 0%;">Banishing Big Brother</h2>
-        <p1 style="color: #FAF0CA;">Cartersville has an ordinance requiring convenience store owners to place cameras
-          in their stores recording all customers and that the footage recorded be easily accessible to police at all
-          times. According to Comparitech, Atlanta is the "most-watched city" in the United States with "124 cameras
-          per 1,000 people" at the police's control. With developing technology in Artificial Intelligence and tracking
-          applications, the major surveillance state is here and watching your moves. Now, more than ever, it is
-          important for citizens to tell their government that they do not want to be recorded and tracked for every
-          public interaction.<br><br>The Libertarian Party of Georgia started Project Banish Big Brother to work
-          locally to stop major surveillance projects from taking off.</p1>
+        <h2 style="color: #FAF0CA; padding-top: 10;"><mark>Banishing Big Brother</mark></h2>
+        <p1 style="color: #FAF0CA;">Cartersville requires convenience stores to install cameras accessible to police, contributing to a growing surveillance state. Atlanta already leads the U.S. in surveillance, with 124 cameras per 1,000 people. With advancing AI and tracking tech, privacy is at risk. Citizens must push back against constant monitoring. The Libertarian Party of Georgia’s Project Banish Big Brother aims to stop local surveillance initiatives.</p1>
       </div>
     </div>
   </div>
