--- a/404.html
+++ b/404.html
@@ -96,7 +96,7 @@
     </div>
   </section>
 
-  <section>
+  <section style="height: 50%;">
     <div class="row">
       <h1>Sorry, that web address doesn't exist or could not be found!</h1>
       <p>For any web-related questions, contact <a href="mailto:sergio.ortega@lpfloyd.com">the site owner</a>.</p>
