--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
   </section>
 
   <section>
+    <div class="row" style="background-color: #8D211F; max-width: 100%;">
+      <div style="margin: auto; width: 70%;">
+        <strong>CONVENTION INFORMATION:</strong> We will be hosting our local convention soon, click <a href="/2025convention.html">here</a> for details.
+      </div>
+    </div>
+  </section>
+
+  <section>
     <div class="row">
       <div class="leftcolumn">
         <section class="news">
