--- a/2025convention.html
+++ b/2025convention.html
@@ -101,12 +101,12 @@
       <h1>Local Convention Information</h1>
       <p style="padding-bottom: 10px;">Per our bylaws, we are required to host an affiliate convention each year in the months prior to the state convention. This year, the state convention will occur on March 8th, 2025, so we will be hosting our local convention in January. All members who are current on their dues to the Libertarian Party of Georgia and who is a bonafide resident of the Bartow, Polk, or Floyd County area is considered a voting member.</p>
 
-      <p><strong>Where?</strong> Rome, GA Mellow Mushroom at 238 Broad St, Rome, GA 30161</p>
-      <p><strong>When?</strong> January 16th, 2025</p>
+      <p><strong>Where?</strong> Osprey Shooting Solutions at 1165 Blacks Bluff Rd SW, Rome, GA 30161</p>
+      <p><strong>When?</strong> Wednesday, January 15th, 2025</p>
       <p><strong>Time?</strong> 7:00 p.m.</p>
 
       <h2>Meeting Notice</h2>
-      <p1>The annual convention of the Libertarian Party of Bartow, Polk, and Floyd County, GA will be held on Thursday, January 16th, 2025, at 7:00 p.m., in the Mellow Mushroom in Rome, GA at 238 Broad St, Rome, GA 30161. Anybody who is a dues-paying member of the Libertarian Party of Georgia may attend as a voting-member at convention.</p1>
+      <p1>The annual convention of the Libertarian Party of Bartow, Polk, and Floyd County, GA will be held on Wednesday, January 15th, 2025, at 7:00 p.m., at Osprey Shooting Solutions in Rome, GA at 1165 Blacks Bluff Rd SW, Rome, GA 30161. Anybody who is a dues-paying member of the Libertarian Party of Georgia may attend as a voting-member at convention.</p1>
 
       <h2>Convention Agenda</h2>
       <div class="pc-only">
