--- a/2025convention.html
+++ b/2025convention.html
@@ -8,7 +8,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Libertarian Party of Floyd County, GA" />
   <meta property="og:title" content="2025 Convention | Libertarian Party of Floyd County" />
-  <meta property="og:description" content="In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead the fight locally on instances of government abuse." />
+  <meta property="og:description" content="The annual convention of the Libertarian Party of Bartow, Polk, and Floyd County, GA will be held on Wednesday, January 15th, 2025, at 7:00 p.m., at Osprey Shooting Solutions in Rome, GA at 1165 Blacks Bluff Rd SW, Rome, GA 30161. Anybody who is a dues-paying member of the Libertarian Party of Georgia may attend as a voting-member at convention." />
   <meta property="og:image" content="/assets/images/logo.png" />
   <link rel="icon" type="image/x-icon" href="/assets/images/logo.png">
   <link rel="stylesheet" href="/assets/css/style.css">
