--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <section>
     <div class="row" style="background-color: #8D211F; max-width: 100%;">
       <div style="margin: auto; width: 70%;">
-        <strong>CONVENTION INFORMATION:</strong> We will be hosting our local convention soon, click <a href="/2025convention.html">here</a> for details.
+        <p style="color: #FAF0CA;"><strong>CONVENTION INFORMATION:</strong> We will be hosting our local convention soon, click <a href="/2025convention.html">here</a> for details.</p>
       </div>
     </div>
   </section>
