--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     </div>
   </section>
 
+<!-- RED ALERT COMMENT
   <section>
     <div class="row" style="background-color: #8D211F; max-width: 100%;">
       <div style="margin: auto; width: 70%;">
@@ -109,6 +110,7 @@
       </div>
     </div>
   </section>
+-->
 
   <section>
     <div class="row">
@@ -134,9 +136,7 @@
           <p1>The Libertarian Party, the largest U.S. third party, stands apart from Democrats and Republicans. Its core principles are simple: live your life as you choose and don’t harm others or take their property. Libertarians advocate for a small government focused solely on peace and property rights—no overreaching agencies, no gun grabs, and no bloated deficits. It’s about you and your community.</p1>
           <p1>Here in Bartow, Polk, and Floyd County, we're on a mission to elect libertarians to local offices to lower our actually property taxes and stretch every dollar they can.
           </p1>
-          </div>
-          </div>
-        </section>
+        </div>
       </div>
       <div class="rightcolumn" style="padding-bottom: 10px;">
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cG6Hb7eQb4I?si=wzjN5yGW9eLIo1E_"
@@ -144,6 +144,8 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
           style="max-width: 100%; display: block; margin: auto;"></iframe>
+      </div>
+        </section>
       </div>
     </div>
   </section>
