--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     </div>
   </section>
 
-<!-- RED ALERT COMMENT
+<!-- RED ALERT COMMENT -->
   <section>
     <div class="row" style="background-color: #8D211F; max-width: 100%;">
       <div style="margin: auto; width: 70%;">
-        <p style="color: #FAF0CA;"><strong>CONVENTION INFORMATION:</strong> We will be hosting our local convention soon, click <a href="/2025convention.html">here</a> for details.</p>
+        <p style="color: #FAF0CA;"><strong>BUSINESS MEETING:</strong> The March Business Meeting will happen at the Cartersville Mellow Mushroom at 28 S Wall St, Cartersville, GA 30120 on March 15th, 2025 at 7:00 p.m. Click <a href="/assets/docs/Agenda/Agenda March 15, 2024.pdf">here</a> for the Agenda. The Minutes for approval can be found <a href="/assets/docs/LPBPFCGA 2025 Convention Minutes.pdf">here</a>>.</p>
       </div>
     </div>
   </section>
--->
+<!-- -->
 
   <section>
     <div class="row">
