Home Page Changes

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           <div class="rightcolumn"
             style="position: absolute;top: 50%;left: 100%;transform: translate(-100%,-50%);width: 100%;">
             <div class="topnav">
-              <a href="/">HOME</a>
-              <a href="/about-us">ABOUT US</a>
-              <a href="/voter-info">VOTER INFO</a>
-              <a href="/event-calendar">EVENT CALENDAR</a>
-              <a href="https://lpgeorgia.com/membership/" style="background-color: #fca311;">JOIN US</a>
+              <a href="/">Home</a>
+              <a href="/about-us">About Us</a>
+              <a href="/voter-info">Voter Info</a>
+              <a href="/event-calendar">Event Calendar</a>
+              <a href="https://lpgeorgia.com/membership/" style="background-color: #fca311;font-weight: bold">Join Today</a>
             </div>
           </div>
         </div>
@@ -80,11 +80,11 @@
 
     <div class="mobile-nav">
       <div class="mobile-topnav">
-        <a href="/">HOME</a>
-        <a href="/about-us">ABOUT US</a>
-        <a href="/voter-info">VOTER INFO</a>
-        <a href="/event-calendar">EVENT CALENDAR</a>
-        <a href="https://lpgeorgia.com/membership/">JOIN US</a>
+        <a href="/">Home</a>
+        <a href="/about-us">About Us</a>
+        <a href="/voter-info">Voter Info</a>
+        <a href="/event-calendar">Event Calendar</a>
+        <a href="https://lpgeorgia.com/membership/">Join Today</a>
       </div>
     </div>
   </header>
@@ -102,50 +102,39 @@
     </div>
   </section>
 
-<!-- RED ALERT COMMENT -->
+  <!-- RED ALERT COMMENT -->
   <section>
     <div class="row" style="background-color: #8D211F; max-width: 100%;">
       <div style="margin: auto; width: 70%;">
-        <p style="color: #FAF0CA;"><strong>BUSINESS MEETING:</strong> The May Business Meeting will happen at the Cartersville Mellow Mushroom at 28 S Wall St, Cartersville, GA 30120 on May 17th, 2025 at 7:00 p.m. Click <a href="/assets/docs/Agenda/Agenda May 17, 2025.pdf">here</a> for the Agenda. The Minutes for approval can be found <a href="/assets/docs/Minutes/Minutes April 19, 2025.pdf">here</a>>.</p>
+        <p style="color: #FAF0CA;"><strong>BUSINESS MEETING:</strong> The May Business Meeting will happen at the
+          Cartersville Mellow Mushroom at 28 S Wall St, Cartersville, GA 30120 on May 17th, 2025 at 7:00 p.m. Click <a
+            href="/assets/docs/Agenda/Agenda May 17, 2025.pdf">here</a> for the Agenda. The Minutes for approval can be
+          found <a href="/assets/docs/Minutes/Minutes April 19, 2025.pdf">here</a>.</p>
       </div>
     </div>
   </section>
-<!-- -->
+  <!-- -->
 
   <section>
     <div class="row">
       <div class="leftcolumn">
         <section class="news">
-          <div class="pc-only">
           <h2 style="padding-top: 0px;">What Is A Libertarian?</h2>
-          <p1>The Libertarian Party is the largest third-party in the United States and acts completely separate from
-            the two major parties. As Libertarians, our philosophy holds two core principles: only you know how to best
-            live your life, and don't hurt people or take their stuff. The end result of these two principles is a
-            legitimate small government tasked only with keeping the peace and protecting property rights, nothing else.
-            In a Libertarian world, there aren't three-letter regulatory agencies that make up rules to take your guns
-            or a bloated deficit being used to line the pockets of politicians. Instead, there is just yourself and your
-            community.</p1>
+          <p1>The Libertarian Party, the largest U.S. third party, stands apart from Democrats and Republicans. Its core
+            principles are simple: live your life as you choose and don’t harm others or take their property.
+            Libertarians advocate for a small government focused solely on peace and property rights—no overreaching
+            agencies, no gun grabs, and no bloated deficits. It’s about you and your community.</p1>
           <p1>In Bartow, Polk, and Floyd County, we're the affiliate to the larger Libertarian Party of Georgia and lead
             the fight locally on instances of government abuse and overpolicing by spreading the word and monitoring the
             other two parties from getting too comfortable. We also work with other freedom organizations in the state
             to introduce their work into the tri-county area.</p1>
-          </div>
-
-          <div class="mobile-only">
-            <h2 style="padding-top: 0px;">What Is A Libertarian?</h2>
-          <p1>The Libertarian Party, the largest U.S. third party, stands apart from Democrats and Republicans. Its core principles are simple: live your life as you choose and don’t harm others or take their property. Libertarians advocate for a small government focused solely on peace and property rights—no overreaching agencies, no gun grabs, and no bloated deficits. It’s about you and your community.</p1>
-          <p1>Here in Bartow, Polk, and Floyd County, we're on a mission to elect libertarians to local offices to lower our actually property taxes and stretch every dollar they can.
-          </p1>
-        </div>
       </div>
       <div class="rightcolumn" style="padding-bottom: 10px;">
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cG6Hb7eQb4I?si=wzjN5yGW9eLIo1E_"
+        <iframe width="560" height="225" src="https://www.youtube-nocookie.com/embed/cG6Hb7eQb4I?si=wzjN5yGW9eLIo1E_"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
           style="max-width: 100%; display: block; margin: auto;"></iframe>
-      </div>
-        </section>
       </div>
     </div>
   </section>
@@ -247,17 +236,29 @@
     <div class="row-omit" style="background-color: #0D3B66; max-width: 100%; position: relative;">
       <div style="margin: auto; width: 70%;">
         <h2 style="color: #FAF0CA; padding-top: 0%;"><mark>Business Regulations</mark></h2>
-        <p1 style="color: #FAF0CA;">Income is vital to a household's survival. Government restrictions on work or business make life harder for families. Unless absolutely necessary, added regulations should not limit businesses. Libertarians oppose excessive regulation, viewing it as unconstitutional interference. Locally, measures like zoning laws and city licenses are often misused, with councils imposing personal values on small businesses by threatening their licenses. Libertarians strongly oppose such abuses of power.</p1>
+        <p1 style="color: #FAF0CA;">Income is vital to a household's survival. Government restrictions on work or
+          business make life harder for families. Unless absolutely necessary, added regulations should not limit
+          businesses. Libertarians oppose excessive regulation, viewing it as unconstitutional interference. Locally,
+          measures like zoning laws and city licenses are often misused, with councils imposing personal values on small
+          businesses by threatening their licenses. Libertarians strongly oppose such abuses of power.</p1>
       </div>
 
       <div style="margin: auto; width: 70%;">
         <h2 style="color: #FAF0CA; padding-top: 10;"><mark>Localized Fiscal Responsibility</mark></h2>
-        <p1 style="color: #FAF0CA;">Last year, the Rome City Commission wasted thousands on attorney fees for an ethics complaint against a Commissioner. The first attorney quit, citing the council's unprofessional behavior, forcing a new attorney to start from scratch. This wasted taxpayer money, which Libertarians see as theft. If taxes are collected, every dollar should provide value. Libertarians pledge to maximize efficiency and avoid tax increases.</p1>
+        <p1 style="color: #FAF0CA;">Last year, the Rome City Commission wasted thousands on attorney fees for an ethics
+          complaint against a Commissioner. The first attorney quit, citing the council's unprofessional behavior,
+          forcing a new attorney to start from scratch. This wasted taxpayer money, which Libertarians see as theft. If
+          taxes are collected, every dollar should provide value. Libertarians pledge to maximize efficiency and avoid
+          tax increases.</p1>
       </div>
 
       <div style="margin: auto; width: 70%;">
         <h2 style="color: #FAF0CA; padding-top: 10;"><mark>Banishing Big Brother</mark></h2>
-        <p1 style="color: #FAF0CA;">Cartersville requires convenience stores to install cameras accessible to police, contributing to a growing surveillance state. Atlanta already leads the U.S. in surveillance, with 124 cameras per 1,000 people. With advancing AI and tracking tech, privacy is at risk. Citizens must push back against constant monitoring. The Libertarian Party of Georgia’s Project Banish Big Brother aims to stop local surveillance initiatives.</p1>
+        <p1 style="color: #FAF0CA;">Cartersville requires convenience stores to install cameras accessible to police,
+          contributing to a growing surveillance state. Atlanta already leads the U.S. in surveillance, with 124 cameras
+          per 1,000 people. With advancing AI and tracking tech, privacy is at risk. Citizens must push back against
+          constant monitoring. The Libertarian Party of Georgia’s Project Banish Big Brother aims to stop local
+          surveillance initiatives.</p1>
       </div>
     </div>
   </div>
