Added June Documents, About-Me, and Index Draft

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
               <a href="/about-us">About Us</a>
               <a href="/voter-info">Voter Info</a>
               <a href="/event-calendar">Event Calendar</a>
-              <a href="https://lpgeorgia.com/membership/" style="background-color: #fca311;font-weight: bold">Join Today</a>
+              <a href="https://lpgeorgia.com/membership/" style="background-color: #fca311;font-weight: bold">Join
+                Today</a>
             </div>
           </div>
         </div>
@@ -106,10 +107,10 @@
   <section>
     <div class="row" style="background-color: #8D211F; max-width: 100%;">
       <div style="margin: auto; width: 70%;">
-        <p style="color: #FAF0CA;"><strong>BUSINESS MEETING:</strong> The May Business Meeting will happen at the
-          Cartersville Mellow Mushroom at 28 S Wall St, Cartersville, GA 30120 on May 17th, 2025 at 7:00 p.m. Click <a
-            href="/assets/docs/Agenda/Agenda May 17, 2025.pdf">here</a> for the Agenda. The Minutes for approval can be
-          found <a href="/assets/docs/Minutes/Minutes April 19, 2025.pdf">here</a>.</p>
+        <p style="color: #FAF0CA;"><strong>BUSINESS MEETING:</strong> The June Business Meeting will happen at the
+          Boldin-Specht Residence on June 21st, 2025 at 7:00 p.m. Click <a
+            href="/assets/docs/Agenda/Agenda June 21, 2025.pdf">here</a> for the Agenda. The Minutes for approval can be
+          found <a href="/assets/docs/Minutes/Minutes May 17, 2025.pdf">here</a>. Please email andy.boldin@lpgeorgia to RSVP attendence.</p>
       </div>
     </div>
   </section>
@@ -139,137 +140,66 @@
     </div>
   </section>
 
-  <div class="row" style="background-color: #FAF0CA; max-width: 100%;">
-    <h1 style="margin-top: 50px; margin: auto; text-align: center;">Get Involved</h1>
+  <section>
+    <div class="row" style="background-color: #FAF0CA; max-width: 100%;">
+      <h1 style="margin-top: 50px; margin: auto; text-align: center;">Get Involved</h1>
 
-    <div class="row">
-      <div class="leftcolumn" style="width: 45%;">
-        <h2 style="color: #0D3B66;">Donate Today</h2>
-        <p1 style="color: #0D3B66;">Being a third-party is expensive since we don't have the major donors like the other
-          two parties. Fortunately, that means we can make our own decisions without dark money influencing what we do.
-          On the flip side, that requires grassroot donations to help fund our operations here in Northwest Georgia. If
-          you support our work, please consider donating to the Libertarian Party of Georgia below.</p1>
-        <a href="https://lpgeorgia.com/donate/"><button class="button">Donate</button></a>
-      </div>
-      <div class="rightcolumn" style="width: 45%;">
-        <h2 style="color: #0D3B66;">Monthly Meetings</h2>
-        <p1 style="color: #0D3B66;">Every month, the Libertarian Party of Bartow, Polk, and Floyd County meets together
-          to plan strategy and discuss new developments within our local tri-county area. You don't have to be a
-          registered libertarian to join in the conversation, we accept all freedom-loving people from any political
-          party to come have some fun while we discuss shared interests.</p1>
-        <a href="/event-calendar.html"><button class="button">Calendar</button></a>
-      </div>
-    </div>
-  </div>
-
-  <div class="pc-only">
-    <div class="row-omit" style="background-color: #0D3B66; max-width: 100%; position: relative;">
-      <div class="row">
-        <div class="leftcolumn" style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
-          <img src="/assets/images/commerce.jpg" style="width: 100%; display: block;">
-        </div>
-        <div class="rightcolumn" style="width: 45%;">
-          <h2 style="color: #FAF0CA; padding-top: 0%;">Business Regulations</h2>
-          <p1 style="color: #FAF0CA;">The world runs on commerce, money, and free trade of goods and labor. At a basic
-            level, labor income is the lifeline of a family's household. When the Government restricts the ability of a
-            person to transact business or work in certain industries, it makes more difficult the life of the
-            household.
-            Except when absolutely needed, the Government should have no ability to restrict businesses with added
-            regulations.<br><br>Libertarians detest excessive business regulation as an unconstitutional exercise of
-            government authority into the lives of working Americans. Most of these regulations take place on the local
-            level, with measures like zoning laws and finance ordinances for businesses to transact commerce. In our
-            area
-            especially, local councils have weaponized city licenses to impose their own values on small businesses. If
-            a
-            business doesn't conform to the local council, they can have their license pulled. This is a gross abuse of
-            power and Libertarians are full against it.</p1>
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="background-color: #0D3B66; max-width: 100%; position: relative;">
       <div class="row">
         <div class="leftcolumn" style="width: 45%;">
-          <h2 style="color: #FAF0CA; padding-top: 0%;">Localized Fiscal Responsibility</h2>
-          <p1 style="color: #FAF0CA;">Last year, the Rome City Commission spent thousands of dollars on attorneys fees
-            to investigate an ethics complaint against one of their own Commissioners. Weeks later, the attorney
-            resigned
-            the
-            case, citing the irresponsible and personally repulsive behavior of the council. Following this resignation,
-            another attorney was retained who had to begin their work from square one. This feat led to a complete and
-            utter waste of taxpayer dollars because Rome's City Commissioners couldn't maintain professionalism for a
-            serious matter.<br><br>Every dollar brought into the government's control was done by theft: all taxation is
-            theft. If they're going to waste the money, they don't deserve it. At the very least, every dollar should
-            produce a dollar's worth of value. Libertarians will stretch every dollar possible so as to avoid increasing
-            taxes.</p1>
-        </div>
-        <div class="rightcolumn" style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);left: 50%;">
-          <img src="/assets/images/fiscal.jpg" style="width: 100%; display: block;">
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="background-color: #0D3B66; max-width: 100%; position: relative;">
-      <div class="row">
-        <div class="leftcolumn" style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
-          <img src="/assets/images/justice.jpg" style="width: 100%; display: block;">
+          <h2 style="color: #0D3B66;">Donate Today</h2>
+          <p1 style="color: #0D3B66;">Being a third-party is expensive since we don't have the major donors like the
+            other
+            two parties. Fortunately, that means we can make our own decisions without dark money influencing what we
+            do.
+            On the flip side, that requires grassroot donations to help fund our operations here in Northwest Georgia.
+            If
+            you support our work, please consider donating to the Libertarian Party of Georgia below.</p1>
+          <a href="https://lpgeorgia.com/donate/"><button class="button">Donate</button></a>
         </div>
         <div class="rightcolumn" style="width: 45%;">
-          <h2 style="color: #FAF0CA; padding-top: 0%;">Banishing Big Brother</h2>
-          <p1 style="color: #FAF0CA;">Cartersville has an ordinance requiring convenience store owners to place cameras
-            in
-            their stores recording all customers and that the footage recorded be easily accessible to police at all
-            times. According to Comparitech, Atlanta is the "most-watched city" in the United States with "124 cameras
-            per
-            1,000 people" at the police's control. With developing technology in Artificial Intelligence and tracking
-            applications, the major surveillance state is here and watching your moves. Now, more than ever, it is
-            important for citizens to tell their government that they do not want to be recorded and tracked for every
-            public interaction.<br><br>The Libertarian Party of Georgia started Project Banish Big Brother to work
-            locally
-            to stop major surveillance projects from taking off.</p1>
+          <h2 style="color: #0D3B66;">Monthly Meetings</h2>
+          <p1 style="color: #0D3B66;">Every month, the Libertarian Party of Bartow, Polk, and Floyd County meets
+            together
+            to plan strategy and discuss new developments within our local tri-county area. You don't have to be a
+            registered libertarian to join in the conversation, we accept all freedom-loving people from any political
+            party to come have some fun while we discuss shared interests.</p1>
+          <a href="/event-calendar.html"><button class="button">Calendar</button></a>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="mobile-only">
-    <div class="row-omit" style="background-color: #0D3B66; max-width: 100%; position: relative;">
-      <div style="margin: auto; width: 70%;">
-        <h2 style="color: #FAF0CA; padding-top: 0%;"><mark>Business Regulations</mark></h2>
-        <p1 style="color: #FAF0CA;">Income is vital to a household's survival. Government restrictions on work or
-          business make life harder for families. Unless absolutely necessary, added regulations should not limit
-          businesses. Libertarians oppose excessive regulation, viewing it as unconstitutional interference. Locally,
-          measures like zoning laws and city licenses are often misused, with councils imposing personal values on small
-          businesses by threatening their licenses. Libertarians strongly oppose such abuses of power.</p1>
-      </div>
-
-      <div style="margin: auto; width: 70%;">
-        <h2 style="color: #FAF0CA; padding-top: 10;"><mark>Localized Fiscal Responsibility</mark></h2>
-        <p1 style="color: #FAF0CA;">Last year, the Rome City Commission wasted thousands on attorney fees for an ethics
-          complaint against a Commissioner. The first attorney quit, citing the council's unprofessional behavior,
-          forcing a new attorney to start from scratch. This wasted taxpayer money, which Libertarians see as theft. If
-          taxes are collected, every dollar should provide value. Libertarians pledge to maximize efficiency and avoid
-          tax increases.</p1>
-      </div>
-
-      <div style="margin: auto; width: 70%;">
-        <h2 style="color: #FAF0CA; padding-top: 10;"><mark>Banishing Big Brother</mark></h2>
-        <p1 style="color: #FAF0CA;">Cartersville requires convenience stores to install cameras accessible to police,
-          contributing to a growing surveillance state. Atlanta already leads the U.S. in surveillance, with 124 cameras
-          per 1,000 people. With advancing AI and tracking tech, privacy is at risk. Citizens must push back against
-          constant monitoring. The Libertarian Party of Georgia’s Project Banish Big Brother aims to stop local
-          surveillance initiatives.</p1>
+    <div style="background-image: url('assets/images/Footer.png');" class="footer-image">
+      <div class="footer">
+        <div class="hero-text">
+          <p1 style="color: white;">Powered by the <a href="https://lpgeorgia.com">Libertarian Party of Georgia</a></p1>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div style="background-image: url('assets/images/Footer.png');" class="footer-image">
-    <div class="footer">
-      <div class="hero-text">
-        <p1 style="color: white;">Powered by the <a href="https://lpgeorgia.com">Libertarian Party of Georgia</a></p1>
+  <section>
+    <div class="row-omit" style="max-width: 100%; position: relative;">
+      <div class="row">
+        <div class="leftcolumn" style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
+          <!-- CARTERSVILLE MAP PIN
+        <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrkhziwp4&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
+        </iframe>
+        -->
+
+          <!-- ROME MAP PIN -->
+          <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+            src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJQYJYsr6kiogRv2BzXvMHwMo&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
+          <!-- -->
+        </div>
+        <div class="rightcolumn" style="width: 45%;">
+          <h2 style="padding-top: 0px;">Next Monthly Meeting</h2>
+          <p1>We meet every third Saturday of the month at 7:00 PM.</p1>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+
 </body>
 
 </html>
