--- a/about-us.html
+++ b/about-us.html
@@ -66,11 +66,11 @@
           <div class="rightcolumn"
             style="position: absolute;top: 50%;left: 100%;transform: translate(-100%,-50%);width: 100%;">
             <div class="topnav">
-              <a href="/">HOME</a>
-              <a href="/about-us">ABOUT US</a>
-              <a href="/voter-info">VOTER INFO</a>
-              <a href="/event-calendar">EVENT CALENDAR</a>
-              <a href="https://lpgeorgia.com/membership/" style="background-color: #fca311;">JOIN US</a>
+              <a href="/">Home</a>
+              <a href="/about-us">About Us</a>
+              <a href="/voter-info">Voter Info</a>
+              <a href="/event-calendar">Event Calendar</a>
+              <a href="https://lpgeorgia.com/membership/" style="background-color: #fca311;font-weight: bold">Join Today</a>
             </div>
           </div>
         </div>
@@ -79,16 +79,16 @@
 
     <div class="mobile-nav">
       <div class="mobile-topnav">
-        <a href="/">HOME</a>
-        <a href="/about-us">ABOUT US</a>
-        <a href="/voter-info">VOTER INFO</a>
-        <a href="/event-calendar">EVENT CALENDAR</a>
-        <a href="https://lpgeorgia.com/membership/">JOIN US</a>
+        <a href="/">Home</a>
+        <a href="/about-us">About Us</a>
+        <a href="/voter-info">Voter Info</a>
+        <a href="/event-calendar">Event Calendar</a>
+        <a href="https://lpgeorgia.com/membership/">Join Today</a>
       </div>
     </div>
   </header>
 
-  <section
+  <section>
     style="background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.9)), url('assets/images/about-us.jpg');"
     class="hero">
     <div class="hero-text">
@@ -97,40 +97,106 @@
   </section>
 
   <section>
-    <div class="row">
-      <div class="leftcolumn">
-        <section class="news">
-          <h2 style="padding-top: 20px;"><mark>A Fight For Life, Liberty, and the Pursuit of Happiness</mark></h2>
-          <p1>The Libertarian Party was founded in 1971 as a third choice from the two major parties' own definition of
-            freedom. Each of the two major parties claim they fight for freedom, but define "freedom" differently. For
-            Libertarians, our form of freedom is radical change to eliminate all unnecessary parts of government.</p1>
-          <p1>We call ourselves the "Party of Principle" because when we say small government, we actually mean it. When
-            we say taxation is theft, we actually mean it. Throughout the years, our party has stayed true to its
-            principles and ran candidates that could best communicate the message of human liberty. We don't make
-            excuses. Libertarians want you to live your life with as minimal government intrusion possible. As long as
-            you don't hurt other people or take their stuff, why should we be the ones to tell you how to live?
-          </p1>
-          <div class="videoWrapper">
-            <iframe width="560" height="315"
-              src="https://www.youtube-nocookie.com/embed/eTs71VCF4eo?si=r87Gp72qtrnkfiA0" title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
-              style="max-width: 100%; display: block; margin: auto; margin-top:10px"></iframe>
-          </div>
-          <p1>The Libertarian Party of Georgia is an affiliate of the larger Libertarian Party. Every year, local
-            libertarians meet together in a convention to decide our leadership, focuses, and candidates we want to run
-            for public office. Unlike the other two parties who take commands from the top down, our leaders are truly
-            elected by the membership and without any backroom deals.
-          </p1>
-        </section>
-      </div>
-      <div class="rightcolumn">
-        <div class="pc-only">
-          <img src="assets/images/Liberty-Skyscraper.png" alt="Justin Amash" width="auto" height="90%">
+      <div class="pc-only">
+    <div class="row-omit" style="background-color: #0D3B66; max-width: 100%; position: relative;">
+      <div class="row">
+        <div class="leftcolumn" style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
+          <img src="/assets/images/commerce.jpg" style="width: 100%; display: block;">
+        </div>
+        <div class="rightcolumn" style="width: 45%;">
+          <h2 style="color: #FAF0CA; padding-top: 0%;">Business Regulations</h2>
+          <p1 style="color: #FAF0CA;">The world runs on commerce, money, and free trade of goods and labor. At a basic
+            level, labor income is the lifeline of a family's household. When the Government restricts the ability of a
+            person to transact business or work in certain industries, it makes more difficult the life of the
+            household.
+            Except when absolutely needed, the Government should have no ability to restrict businesses with added
+            regulations.<br><br>Libertarians detest excessive business regulation as an unconstitutional exercise of
+            government authority into the lives of working Americans. Most of these regulations take place on the local
+            level, with measures like zoning laws and finance ordinances for businesses to transact commerce. In our
+            area
+            especially, local councils have weaponized city licenses to impose their own values on small businesses. If
+            a
+            business doesn't conform to the local council, they can have their license pulled. This is a gross abuse of
+            power and Libertarians are full against it.</p1>
         </div>
       </div>
     </div>
+
+    <div class="row" style="background-color: #0D3B66; max-width: 100%; position: relative;">
+      <div class="row">
+        <div class="leftcolumn" style="width: 45%;">
+          <h2 style="color: #FAF0CA; padding-top: 0%;">Localized Fiscal Responsibility</h2>
+          <p1 style="color: #FAF0CA;">Last year, the Rome City Commission spent thousands of dollars on attorneys fees
+            to investigate an ethics complaint against one of their own Commissioners. Weeks later, the attorney
+            resigned
+            the
+            case, citing the irresponsible and personally repulsive behavior of the council. Following this resignation,
+            another attorney was retained who had to begin their work from square one. This feat led to a complete and
+            utter waste of taxpayer dollars because Rome's City Commissioners couldn't maintain professionalism for a
+            serious matter.<br><br>Every dollar brought into the government's control was done by theft: all taxation is
+            theft. If they're going to waste the money, they don't deserve it. At the very least, every dollar should
+            produce a dollar's worth of value. Libertarians will stretch every dollar possible so as to avoid increasing
+            taxes.</p1>
+        </div>
+        <div class="rightcolumn" style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);left: 50%;">
+          <img src="/assets/images/fiscal.jpg" style="width: 100%; display: block;">
+        </div>
+      </div>
+    </div>
+
+    <div class="row" style="background-color: #0D3B66; max-width: 100%; position: relative;">
+      <div class="row">
+        <div class="leftcolumn" style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
+          <img src="/assets/images/justice.jpg" style="width: 100%; display: block;">
+        </div>
+        <div class="rightcolumn" style="width: 45%;">
+          <h2 style="color: #FAF0CA; padding-top: 0%;">Banishing Big Brother</h2>
+          <p1 style="color: #FAF0CA;">Cartersville has an ordinance requiring convenience store owners to place cameras
+            in
+            their stores recording all customers and that the footage recorded be easily accessible to police at all
+            times. According to Comparitech, Atlanta is the "most-watched city" in the United States with "124 cameras
+            per
+            1,000 people" at the police's control. With developing technology in Artificial Intelligence and tracking
+            applications, the major surveillance state is here and watching your moves. Now, more than ever, it is
+            important for citizens to tell their government that they do not want to be recorded and tracked for every
+            public interaction.<br><br>The Libertarian Party of Georgia started Project Banish Big Brother to work
+            locally
+            to stop major surveillance projects from taking off.</p1>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mobile-only">
+    <div class="row-omit" style="background-color: #0D3B66; max-width: 100%; position: relative;">
+      <div style="margin: auto; width: 70%;">
+        <h2 style="color: #FAF0CA; padding-top: 0%;"><mark>Business Regulations</mark></h2>
+        <p1 style="color: #FAF0CA;">Income is vital to a household's survival. Government restrictions on work or
+          business make life harder for families. Unless absolutely necessary, added regulations should not limit
+          businesses. Libertarians oppose excessive regulation, viewing it as unconstitutional interference. Locally,
+          measures like zoning laws and city licenses are often misused, with councils imposing personal values on small
+          businesses by threatening their licenses. Libertarians strongly oppose such abuses of power.</p1>
+      </div>
+
+      <div style="margin: auto; width: 70%;">
+        <h2 style="color: #FAF0CA; padding-top: 10;"><mark>Localized Fiscal Responsibility</mark></h2>
+        <p1 style="color: #FAF0CA;">Last year, the Rome City Commission wasted thousands on attorney fees for an ethics
+          complaint against a Commissioner. The first attorney quit, citing the council's unprofessional behavior,
+          forcing a new attorney to start from scratch. This wasted taxpayer money, which Libertarians see as theft. If
+          taxes are collected, every dollar should provide value. Libertarians pledge to maximize efficiency and avoid
+          tax increases.</p1>
+      </div>
+
+      <div style="margin: auto; width: 70%;">
+        <h2 style="color: #FAF0CA; padding-top: 10;"><mark>Banishing Big Brother</mark></h2>
+        <p1 style="color: #FAF0CA;">Cartersville requires convenience stores to install cameras accessible to police,
+          contributing to a growing surveillance state. Atlanta already leads the U.S. in surveillance, with 124 cameras
+          per 1,000 people. With advancing AI and tracking tech, privacy is at risk. Citizens must push back against
+          constant monitoring. The Libertarian Party of Georgia’s Project Banish Big Brother aims to stop local
+          surveillance initiatives.</p1>
+      </div>
+    </div>
+  </div>
   </section>
 
   <div style="background-image: url('assets/images/Footer.png');" class="footer-image">
