--- a/index.html
+++ b/index.html
@@ -168,33 +168,37 @@
       </div>
     </div>
 
-    <div style="background-image: url('assets/images/Footer.png');" class="footer-image">
-      <div class="footer">
-        <div class="hero-text">
-          <p1 style="color: white;">Powered by the <a href="https://lpgeorgia.com">Libertarian Party of Georgia</a></p1>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section>
+    <section>
     <div class="row-omit" style="max-width: 100%; position: relative;">
       <div class="row">
         <div class="leftcolumn" style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
           <!-- CARTERSVILLE MAP PIN
-        <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+        <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
 src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrkhziwp4&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
         </iframe>
         -->
 
           <!-- ROME MAP PIN -->
-          <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+          <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
             src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJQYJYsr6kiogRv2BzXvMHwMo&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
           <!-- -->
         </div>
         <div class="rightcolumn" style="width: 45%;">
           <h2 style="padding-top: 0px;">Next Monthly Meeting</h2>
-          <p1>We meet every third Saturday of the month at 7:00 PM.</p1>
+          <p1>We meet every third Saturday of the month at 7:00 PM to discuss local politics, affiliate business matters, and invite liberty-minded speakers frequently. All members of the public are invited to attend, whether they're libertarians or not. We make an effort to alternate between Cartersville and Rome to best accomodate all members of our community.</p1>
+          <h4 style="padding-bottom: 0px;">Event Details:</h4>
+          <p1>June Monthly Meeting<br />Boldin-Specht Residence (RSVP for Location)<br />June 21st, 2025 at 7:00 PM</p1>
+          <h4 style="padding-bottom: 0px;">Attachments</h4>
+          <p1>Meeting Agenda:<br /><a href="/assets/docs/Agenda/Agenda June 21, 2025.pdf">Click Here for Agenda</a><br />Minutes for Approval:<br /><a href="/assets/docs/Minutes/Minutes May 17, 2025.pdf">Click Here for Minutes</a><br /></p1>
+        </div>
+      </div>
+    </div>
+  </section>
+
+    <div style="background-image: url('assets/images/Footer.png');" class="footer-image">
+      <div class="footer">
+        <div class="hero-text">
+          <p1 style="color: white;">Powered by the <a href="https://lpgeorgia.com">Libertarian Party of Georgia</a></p1>
         </div>
       </div>
     </div>
