--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
   </section>
 
-  <!-- RED ALERT COMMENT -->
+  <!-- RED ALERT COMMENT
   <section>
     <div class="row" style="background-color: #8D211F; max-width: 100%;">
       <div style="margin: auto; width: 70%;">
@@ -114,7 +114,7 @@
       </div>
     </div>
   </section>
-  <!-- -->
+  -->
 
   <section>
     <div class="row">
@@ -154,7 +154,7 @@
             On the flip side, that requires grassroot donations to help fund our operations here in Northwest Georgia.
             If
             you support our work, please consider donating to the Libertarian Party of Georgia below.</p1>
-          <a href="https://lpgeorgia.com/donate/"><button class="button">Donate</button></a>
+          <a href="https://lpgeorgia.com/donate&quot;LPBPFCGA&quot;"><button class="button">Donate</button></a>
         </div>
         <div class="rightcolumn" style="width: 45%;">
           <h2 style="color: #0D3B66;">Monthly Meetings</h2>
@@ -169,36 +169,67 @@
     </div>
 
     <section>
-    <div class="row-omit" style="max-width: 100%; position: relative;">
-      <div class="row">
-        <div class="leftcolumn" style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
-          <!-- CARTERSVILLE MAP PIN
+      <div class="row-omit" style="max-width: 100%; position: relative;">
+        <div class="row">
+          <div class="leftcolumn"
+            style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
+            <!-- CARTERSVILLE MAP PIN
         <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
 src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrkhziwp4&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
         </iframe>
         -->
 
-          <!-- ROME MAP PIN -->
-          <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
-            src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJQYJYsr6kiogRv2BzXvMHwMo&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
-          <!-- -->
-        </div>
-        <div class="rightcolumn" style="width: 45%;">
-          <h2 style="padding-top: 0px;">Next Monthly Meeting</h2>
-          <p1>We meet every third Saturday of the month at 7:00 PM to discuss local politics, affiliate business matters, and invite liberty-minded speakers frequently. All members of the public are invited to attend, whether they're libertarians or not. We make an effort to alternate between Cartersville and Rome to best accomodate all members of our community.</p1>
-          <h4 style="padding-bottom: 0px;">Event Details:</h4>
-          <p1>June Monthly Meeting<br />Boldin-Specht Residence (RSVP for Location)<br />June 21st, 2025 at 7:00 PM</p1>
-          <h4 style="padding-bottom: 0px;">Attachments</h4>
-          <p1>Meeting Agenda:<br /><a href="/assets/docs/Agenda/Agenda June 21, 2025.pdf">Click Here for Agenda</a><br />Minutes for Approval:<br /><a href="/assets/docs/Minutes/Minutes May 17, 2025.pdf">Click Here for Minutes</a><br /></p1>
+            <!-- ROME MAP PIN -->
+            <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
+              src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJQYJYsr6kiogRv2BzXvMHwMo&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
+            <!-- -->
+
+            <!-- OSPREY MAP PIN -->
+            <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
+              src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJOXS9St29iogRq6cnqRuYDuA&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
+            <!-- -->
+          </div>
+          <div class="rightcolumn" style="width: 45%;">
+            <h2 style="padding-top: 0px;">Next Monthly Meeting</h2>
+            <p1>We meet every third Saturday of the month at 7:00 PM to discuss local politics, affiliate business
+              matters, and invite liberty-minded speakers frequently. All members of the public are invited to attend,
+              whether they're libertarians or not. We make an effort to alternate between Cartersville and Rome to best
+              accomodate all members of our community.</p1>
+            <h4 style="padding-bottom: 0px;">Event Details:</h4>
+            <p1>June Monthly Meeting<br />Boldin-Specht Residence (RSVP for Location)<br />June 21st, 2025 at 7:00 PM
+            </p1>
+            <h4 style="padding-bottom: 0px;">Attachments</h4>
+            <p1>Meeting Agenda:<br /><a href="/assets/docs/Agenda/Agenda June 21, 2025.pdf">Click Here for
+                Agenda</a><br />Minutes for Approval:<br /><a href="/assets/docs/Minutes/Minutes May 17, 2025.pdf">Click
+                Here for Minutes</a><br /></p1>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+    <section>
+      <!-- Element to contain animated typing -->
+      <h2>HAD ENOUGH?<br />FIGHT FOR </h2> <span id="typed"></span>
+
+      <!-- Load library from the CDN -->
+      <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+      <!-- Setup and start animation! -->
+      <script>
+        var typed = new Typed('#typed', {
+          strings: ['Freedom.', 'Liberty.', 'Happiness.', 'Lower Taxes.', 'Less Mandates.', 'Less Rules.', 'a Balanced Budget.', 'a Better County Government.', 'a Grassroots Movement.'],
+          typeSpeed: 50,
+        });
+      </script>
+
+      <p1>We are Libertarian because we are tired with the status quo. Both parties promise us freedom, but neither of them deliver. Whether it's because of backdoor deals or big-named donors, we're tired of the fighting and just want a world of freedom for everyone. Our motto is simple: DON'T TREAD ON ANYONE.</p1>
+    </section>
 
     <div style="background-image: url('assets/images/Footer.png');" class="footer-image">
       <div class="footer">
         <div class="hero-text">
-          <p1 style="color: white;">Powered by the <a href="https://lpgeorgia.com">Libertarian Party of Georgia</a></p1>
+          <p1 style="color: white;">Powered by the <a href="https://lpgeorgia.com">Libertarian Party of
+              Georgia.<br />bartowpolkfloyd@lpgeorgia.com</a></p1>
         </div>
       </div>
     </div>
