--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrk
         </iframe>
         -->
 
-            <!-- ROME MAP PIN -->
+            <!-- ROME MAP PIN 
             <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
               src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJQYJYsr6kiogRv2BzXvMHwMo&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
-            <!-- -->
+            -->
 
             <!-- OSPREY MAP PIN -->
             <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
@@ -208,8 +208,9 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrk
     </section>
 
     <section>
-      <!-- Element to contain animated typing -->
-      <h2>HAD ENOUGH?<br />FIGHT FOR </h2> <span id="typed"></span>
+      <div class="row">
+        <!-- Element to contain animated typing -->
+      <h2>HAD ENOUGH?<br />FIGHT FOR <span id="typed"></span></h2>
 
       <!-- Load library from the CDN -->
       <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
@@ -217,12 +218,13 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrk
       <!-- Setup and start animation! -->
       <script>
         var typed = new Typed('#typed', {
-          strings: ['Freedom.', 'Liberty.', 'Happiness.', 'Lower Taxes.', 'Less Mandates.', 'Less Rules.', 'a Balanced Budget.', 'a Better County Government.', 'a Grassroots Movement.'],
+          strings: ['FREEDOM.', 'LIBERTY.', 'HAPPINESS.', 'LOWER TAXES.', 'LESS MANDATES.', 'LESS RULES.', 'A BALANCED BUDGET.', 'A BETTER COUNTY GOVERNMENT.', 'A GRASSROOTS MOVEMENT.', 'A TRUE AMERICAN MOVEMENT.'],
           typeSpeed: 50,
         });
       </script>
 
       <p1>We are Libertarian because we are tired with the status quo. Both parties promise us freedom, but neither of them deliver. Whether it's because of backdoor deals or big-named donors, we're tired of the fighting and just want a world of freedom for everyone. Our motto is simple: DON'T TREAD ON ANYONE.</p1>
+      </div>
     </section>
 
     <div style="background-image: url('assets/images/Footer.png');" class="footer-image">
