--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrk
     </section>
 
     <section>
-      <div class="row">
+      <div class="row" style="padding-top:0px">
         <!-- Element to contain animated typing -->
-      <h2>HAD ENOUGH?<br />FIGHT FOR <span id="typed"></span></h2>
+      <h1 style="padding-top:0px">HAD ENOUGH?<br />FIGHT FOR <span id="typed"></span></h1>
 
       <!-- Load library from the CDN -->
       <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
@@ -220,6 +220,9 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrk
         var typed = new Typed('#typed', {
           strings: ['FREEDOM.', 'LIBERTY.', 'HAPPINESS.', 'LOWER TAXES.', 'LESS MANDATES.', 'LESS RULES.', 'A BALANCED BUDGET.', 'A BETTER COUNTY GOVERNMENT.', 'A GRASSROOTS MOVEMENT.', 'A TRUE AMERICAN MOVEMENT.'],
           typeSpeed: 50,
+          shuffle: true,
+          loop: true,
+          loopCount: Infinity,
         });
       </script>
 
