--- a/about-us.html
+++ b/about-us.html
@@ -88,7 +88,7 @@
     </div>
   </header>
 
-  <section>
+  <section
     style="background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.9)), url('assets/images/about-us.jpg');"
     class="hero">
     <div class="hero-text">
