August Meeting / Header Change

--- a/event-calendar.html
+++ b/event-calendar.html
@@ -47,7 +47,7 @@
 
 <body>
 
-  <!-- HEADER STARTS HERE -->
+<!-- HEADER STARTS HERE -->
   <header>
     <div class="header-container">
       <section>
@@ -66,11 +66,12 @@
           <div class="rightcolumn"
             style="position: absolute;top: 50%;left: 100%;transform: translate(-100%,-50%);width: 100%;">
             <div class="topnav">
-              <a href="/">HOME</a>
-              <a href="/about-us">ABOUT US</a>
-              <a href="/voter-info">VOTER INFO</a>
-              <a href="/event-calendar">EVENT CALENDAR</a>
-              <a href="https://lpgeorgia.com/membership/" style="background-color: #fca311;">JOIN US</a>
+              <a href="/">Home</a>
+              <a href="/about-us">About Us</a>
+              <a href="/voter-info">Voter Info</a>
+              <a href="/event-calendar">Event Calendar</a>
+              <a href="https://lpgeorgia.com/membership/" style="background-color: #fca311;font-weight: bold">Join
+                Today</a>
             </div>
           </div>
         </div>
@@ -79,11 +80,11 @@
 
     <div class="mobile-nav">
       <div class="mobile-topnav">
-        <a href="/">HOME</a>
-        <a href="/about-us">ABOUT US</a>
-        <a href="/voter-info">VOTER INFO</a>
-        <a href="/event-calendar">EVENT CALENDAR</a>
-        <a href="https://lpgeorgia.com/membership/">JOIN US</a>
+        <a href="/">Home</a>
+        <a href="/about-us">About Us</a>
+        <a href="/voter-info">Voter Info</a>
+        <a href="/event-calendar">Event Calendar</a>
+        <a href="https://lpgeorgia.com/membership/">Join Today</a>
       </div>
     </div>
   </header>
