--- a/index.html
+++ b/index.html
@@ -173,16 +173,16 @@
         <div class="row">
           <div class="leftcolumn"
             style="width: 50%;position: absolute;top: 50%;transform: translateY(-50%);right: 50%;">
-        <!-- --> CARTERSVILLE MAP PIN
+        <!-- CARTERSVILLE MAP PIN
         <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
 src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrkhziwp4&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
         </iframe>
-        <!-- -->
+        -->
 
-            <!-- ROME MAP PIN 
+            <!-- ROME MAP PIN -->
             <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
               src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJQYJYsr6kiogRv2BzXvMHwMo&key=AIzaSyA4mTDxAhzFidmM2etvWQZbtvZbWttmbMs"></iframe>
-            -->
+            <!-- -->
 
             <!-- OSPREY MAP PIN
             <iframe width="960" height="450" style="border:0" loading="lazy" allowfullscreen
@@ -196,10 +196,10 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJk0khWA1P9YgRMdPrk
               whether they're libertarians or not. We make an effort to alternate between Cartersville and Rome to best
               accomodate all members of our community.</p1>
             <h4 style="padding-bottom: 0px;">Event Details:</h4>
-            <p1>July Monthly Meeting<br />Mellow Mushroom (Cartersville, GA)<br />July 19th, 2025 at 7:00 PM
+            <p1>August Monthly Meeting<br />Mellow Mushroom (Rome, GA)<br />August 16th, 2025 at 7:00 PM
             </p1>
             <h4 style="padding-bottom: 0px;">Attachments</h4>
-            <p1>Meeting Agenda:<br /><a href="/assets/docs/Agenda/Agenda July 19, 2025.pdf">Click Here for
+            <p1>Meeting Agenda:<br /><a href="/assets/docs/Agenda/Agenda August 16, 2025.pdf">Click Here for
                 Agenda</a><br />Minutes for Approval:<br /><a href="/assets/docs/Minutes/Minutes May 17, 2025.pdf">Click
                 Here for Minutes</a><br /></p1>
           </div>
